# druck

./: README.md
example/: .gitignore  CMakeLists.txt  README.md
example/src/: car.cpp  examples.hpp  main.cpp  triangle.cpp
include/druck/: animation.hpp  logging.hpp  math.hpp  rendering.hpp  resources.hpp  window.hpp
src/: animation.cpp  druck.cpp  logging.cpp  math.cpp  rendering.cpp  resources.cpp  window.cpp
